# enterprise-rag-architecture

./: .env.example  .gitignore  .pre-commit-config.yaml  ASSESSMENT.md  CLAUDE.md  PROGRESS.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  SETUP_PROMPT.md  TRAPS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  eval.yml
data/golden/: golden_set.jsonl
data/raw/: README.md  fiod_intern_001_signalen_vermogensfraude.html  fiod_intern_002_constructies_offshore.html  fiod_intern_003_invordering_bestuurders.html  wet_ib_2001_art_3_1.html  wet_ib_2001_art_3_113.html  wet_ib_2001_art_3_114.html  wet_ib_2001_art_3_14.html  wet_ib_2001_art_3_16.html  wet_ib_2001_art_3_20.html  wet_ib_2001_art_3_46.html  wet_ib_2001_art_3_76.html  wet_ib_2001_art_3_77.html  wet_ib_2001_art_3_8.html  wet_ib_2001_art_4_6.html  wet_ib_2001_art_5_2.html  wet_ib_2001_art_8_1.html
docs/: AI_USAGE.md
docs/concepts/: 01-vectors-and-embeddings.md  02-hnsw.md  03-quantization.md  04-bm25-vs-dense.md  05-rrf.md  06-reranking.md  07-hierarchical-chunking.md  08-rbac-pre-filter.md  09-langgraph-crag.md  10-semantic-cache.md  11-rag-evaluation.md  CONCEPTS_INDEX.md
docs/decisions/: 001-qdrant-over-pgvector.md  002-rrf-over-alpha-fusion.md  003-pre-filter-rbac.md  004-three-way-grader.md  005-semantic-cache-threshold.md  006-citation-enforcement.md  007-embedding-data-residency.md  008-langchain-langgraph.md  009-reranker-choice.md  010-faithfulness-ci-gate.md  011-demo-corpus-synthetic.md  012-agent-state-and-test-overrides.md  013-semantic-cache-redis-buckets.md  DECISIONS_INDEX.md
docs/design/: architecture.md
docs/project/: PROGRESS.md  PROJECT_STRUCTURE.md  README.md  SETUP_PROMPT.md  STACK.md  WORKFLOW.md
scripts/: eval.py  ingest.py
src/: config.py  test_smoke.py
src/agent/: __init__.py  graph.py  llm_factory.py  state.py
src/agent/nodes/: __init__.py  decompose.py  escalate.py  generate.py  grade.py  retrieve.py  rewrite.py
src/agent/tests/: __init__.py  test_generate_validation.py  test_grade_offline.py  test_graph.py  test_rbac_agent_integration.py  test_state.py
src/api/: __init__.py  auth.py  main.py  test_api.py
src/eval/: ragas_runner.py  test_ragas_runner.py
src/ingestion/: chunker.py  embed.py  qdrant_setup.py  schema.py  test_chunker.py
src/ops/: __init__.py  cache.py  test_cache.py
src/retrieval/: __init__.py  bm25.py  dense.py  fusion.py  rerank.py
src/retrieval/tests/: test_bm25.py  test_fusion.py  test_rbac_integration.py
