[project]
name = "legal-rag-nl"
version = "0.1.0"
description = "Production-grade RAG system for Dutch legal and fiscal documents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # RAG framework
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langchain-cohere>=0.4",
    "langgraph>=0.4",
    # Vector DB
    "qdrant-client>=1.13",
    # Embeddings / LLM
    "openai>=1.75",
    # Reranking
    "cohere>=5.15",
    # Sparse retrieval
    "rank-bm25>=0.2",
    # Cache
    "redis>=5.2",
    # API layer
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    # Data validation
    "pydantic>=2.11",
    "pydantic-settings>=2.9",
    # Evaluation
    "ragas>=0.2",
    # Utilities
    "python-dotenv>=1.1",
    "httpx>=0.28",
    "tqdm>=4.67",
    "tenacity>=9.1",
    # HTML parsing for the legal document chunker
    "beautifulsoup4>=4.12",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.26",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=4.2",
    "types-tqdm>=4.67",
    "types-redis>=4.6",
    "types-beautifulsoup4>=4.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---------------------------------------------------------------------------
# ruff — lint + format (replaces black, isort, flake8, pyupgrade)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations (enforce type hints)
    "N",   # pep8-naming
]
ignore = [
    "ANN101",  # Missing type annotation for `self`
    "ANN102",  # Missing type annotation for `cls`
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy — strict mode
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
# Allow Pydantic models (they use dynamic assignment internally)
plugins = ["pydantic.mypy"]

# Packages not yet imported under src/ are omitted to avoid mypy
# "unused section" warnings when running `mypy src` (e.g. in CI).
[[tool.mypy.overrides]]
module = ["rank_bm25.*", "cohere.*", "bs4.*"]
ignore_missing_imports = true

# Pytest fixtures / marks are untyped; strict "untyped decorator" fails on @pytest.fixture.
[[tool.mypy.overrides]]
module = "src.retrieval.tests.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "src.agent.tests.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["src.api.main", "src.api.test_api", "src.ops.test_cache"]
disallow_untyped_decorators = false

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["src", "tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
